src/ai/snapshots/ciq__ai__ai_render__ai_render_tests__snapshot_ai_pending_80x24.snap
---
source: src/ai/ai_render_tests.rs
expression: screen
---
"                                                                                "
"┌ ask AI (Enter to generate, Esc to close) ────┐                                "
"│> top 10 by amount                            │                                "
"│generating…                                   │                                "
"└──────────────────────────────────────────────┘                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
