src/ai/snapshots/ciq__ai__ai_render__ai_render_tests__snapshot_ai_success_80x24.snap
---
source: src/ai/ai_render_tests.rs
expression: screen
---
"                                                                                "
"┌ ask AI (Enter to generate, Esc to close) ────┐                                "
"│> all rows                                    │                                "
"│SELECT * FROM t                               │                                "
"└──────────────────────────────────────────────┘                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
